--- a/frontend/src/pages/home/index.css
+++ b/frontend/src/pages/home/index.css
@@ -16,3 +16,21 @@
   clip-path: polygon(0 0, calc(100% - 15px) 0, calc(100% )  100% , 0% 100%);
   transition: width 0.4s ease;
 }
+
+.mining-progress {
+  display: flex;
+}
+
+@media(max-width: 768px) {
+  .custom-border-top {
+    margin-top: 20px;
+  }
+
+  .divide-y {
+    display: none;
+  }
+
+  .mining-progress {
+    display: block !important;
+  }
+}
