--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -990,6 +990,7 @@ body {
   .custom-content {
     width: 100% !important;
     margin-top: 70px; /* Space for mobile menu button */
+    height: 100%;
   }
   
   .custom-menu {
@@ -1075,6 +1076,6 @@ body {
 .card, .card:focus, .card:focus-visible, .card-body {
   background: transparent;
   background-color: transparent !important;
-  border-radius: none !important;
-  border: 1px solid black !important;
+  border-radius: 0;
+  border: 2px solid black !important;
 }
