--- a/frontend/src/pages/profile/index.css
+++ b/frontend/src/pages/profile/index.css
@@ -13,7 +13,7 @@
   background-color: black;
   width: calc(var(--progress) * 1%);
   height: 30px;
-  clip-path: polygon(0 0, calc(100% - 15px) 0, calc(100% )  100% , 0% 100%);
+  clip-path: polygon(0 0, calc(100% - 15px) 0, calc(100%) 100%, 0% 100%);
   transition: width 0.4s ease;
 }
 
@@ -30,21 +30,69 @@
   align-items: center;
 }
 
+.sn-success {
+  background-color: black !important;
+  color: #A9E000 !important;
+}
+
+.sn-warning {
+  background-color: #0003 !important;
+}
+
+.sn-danger {
+  background-color: #D7263D !important;
+  color: white !important;
+
+}
+
+.sn-border {
+  border: 3px solid black;
+}
+
+.sn-bold-border {
+  border: 7px solid black;
+  padding: 1rem;
+}
+
+.sn-y-border {
+  border-width: 1px 0;
+  border-style: solid;
+  border-color: black;
+}
+
+.sn-bg-success {
+  background-color: #A9E000;
+}
+
+.sn-select-role-actions {
+  background-color: #0003;
+  padding: 1rem;
+}
+
+.sn-require-section>.sn-rq-staker {
+  width: 50%;
+}
+
+.sn-require-section>.sn-rq-patron {
+  width: 100%;
+}
+
 /* Mobile responsive adjustments */
 @media (max-width: 768px) {
 
   .profile-section {
-  display: flex;
-  align-items: center;
-}
+    flex-direction: column;
+    align-items: center;
+  }
+
   .retro-title {
     font-size: 1.2rem;
     letter-spacing: 1px;
   }
 
   .avatar-container {
-    width: 80px;
-    height: 80px;
+    width: 180px;
+    height: 180px;
   }
 
   .pixel-avatar {
@@ -86,6 +134,19 @@
     min-width: 60px;
     padding: 10px 5px;
   }
+
+  .sn-require-section>.sn-rq-staker {
+    width: 100%;
+  }
+
+  .sn-require-section {
+    flex-direction: column;
+  }
+
+  .sn-bold-border {
+    border: 0px solid black;
+    padding: 0 !important;
+  }
 }
 
 @media (max-width: 576px) {
@@ -114,5 +175,3 @@
     font-size: 2.8rem;
   }
 }
-
-
