--- a/frontend/src/pages/home/index.css
+++ b/frontend/src/pages/home/index.css
@@ -13,7 +13,7 @@
   background-color: black;
   width: calc(var(--progress) * 1%);
   height: 30px;
-  clip-path: polygon(0 0, calc(100% - 15px) 0, calc(100% )  100% , 0% 100%);
+  clip-path: polygon(0 0, calc(100% ) 0, calc(100% )  100% , 0% 100%);
   transition: width 0.4s ease;
 }
 
