--- a/frontend/src/pages/profile/index.css
+++ b/frontend/src/pages/profile/index.css
@@ -175,3 +175,10 @@
     font-size: 2.8rem;
   }
 }
+
+.role-require-title {
+  background-color: yellow;
+  color: red;
+  border: 2px solid red;
+  padding: 10px;
+}
